@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.44">
+<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.45">
   <requires>
     <!-- <import addon="xbmc.python" version="2.24.0"/> -->
     <import addon="script.module.beautifulsoup4" version="4.5.3" />
@@ -25,9 +25,8 @@
       <fanart>fanart.jpg</fanart>
     </assets>
     <news>
-Changelog 0.3.44 [20230308]:
-- cleanup html tags in description
-- fixed next page in recommendations
+Changelog 0.3.45 [20230309]:
+- Added Aniskip
     </news>
   </extension>
 </addon>
