@@ -1,3 +1,6 @@
+Changelog 0.3.45 [20230309]:
+- Added Aniskip
+
 Changelog 0.3.44 [20230308]:
 - cleanup html tags in description
 - fixed next page in recommendations
